<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.17">

        <Spinner
            android:id="@+id/fromSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/unitArray"
            android:popupBackground="@color/colorPrimary"
            android:prompt="@string/selectFrom"
            android:spinnerMode="dropdown"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.26">

        <Spinner
            android:id="@+id/toSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/unitArray"
            android:popupBackground="@color/colorPrimary"
            android:prompt="@string/selectTo"
            android:spinnerMode="dropdown"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/okButton"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="@string/okButton" />
    </RelativeLayout>
</LinearLayout>